IDay - Refactor Auth0ManagementAPI  to stop using deprecated methods (#13054)